flask/DeploymentConfig.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  labels:
    app: flask
  name: flask
spec:
  replicas: 1
  selector:
    app: flask
  strategy:
    resources:
      requests:
        memory: "32Mi"
        cpu: "100m"
      limits:
        cpu: "200m"
        memory: "128Mi"
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      labels:
        app: flask
    spec:
      containers:
      - image: flask-uat:latest
        imagePullPolicy: IfNotPresent
        name: flask-app
        ports:
        - containerPort: 8080
          protocol: TCP
        resources:
          requests:
            memory: "32Mi"
            cpu: "100m"
          limits:
            cpu: "200m"
            memory: "128Mi"
        terminationMessagePath: /dev/termination-log
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      securityContext: {}
      terminationGracePeriodSeconds: 30
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - flask-app
      from:
        kind: ImageStreamTag
        name: flask-uat:latest
    type: ImageChange
