flask/Service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: flask-service
  labels:
    app: flask
spec:
  type: ClusterIP
  selector:
    app: flask  
  ports:
  - name: http
    port: 8080
    targetPort: 8080
    protocol: TCP
