flask/Route.yaml
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: flask-router
  labels:
    app: flask
spec:
  host: ""
  to:
    kind: Service
    name: flask-service-uat
    weight: 100
  port:
    targetPort: 8080
  wildcardPolicy: None
